# SO-Projects

./: CMakeLists.txt  README.md
Headers/: Philosopher.h  Waiter.h
Sources/: Philosopher.cpp  RunFile.cpp  Waiter.cpp
